<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hooki.bunapp.views.DirectoryActivity">

    <include layout="@layout/actionbar_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/countries_title"
                android:textColor="@color/secondary_text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/txt_Pais_selecter"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/countries_searcher"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <ImageView
                    android:id="@+id/btn_buscarPais"
                    android:layout_width="50dp"
                    android:padding="1dp"
                    android:layout_height="50dp"
                    android:src="@drawable/right"
                    android:onClick="goListaPais"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/state_title"
                android:textColor="@color/secondary_text"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/txt_edo_selecter"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/countries_searcher"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <ImageView
                    android:id="@+id/btn_selecter_edo"
                    android:layout_width="50dp"
                    android:padding="1dp"
                    android:layout_height="50dp"
                    android:src="@drawable/right"
                    android:onClick="goListaEstados"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_horizontal_login">
                <Button
                    android:id="@+id/btn_consultar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_search"
                    android:theme="@style/RaisedButtonDark"
                    android:onClick="goResultados"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/lsv_clinicas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
